# konnektoren-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  index.html  justfile  konnektoren-yew-bin-129c2810e9f089df.js  konnektoren-yew-bin-129c2810e9f089df_bg.wasm  konnektoren-yew-bin-1405670167cf02eb.js  konnektoren-yew-bin-1405670167cf02eb_bg.wasm  konnektoren-yew-bin-15648bb83f9fd2ee.js  konnektoren-yew-bin-15648bb83f9fd2ee_bg.wasm  konnektoren-yew-bin-1632ac521fb6a344.js  konnektoren-yew-bin-1632ac521fb6a344_bg.wasm  konnektoren-yew-bin-16a34bcdb91e11a2.js  konnektoren-yew-bin-16a34bcdb91e11a2_bg.wasm  konnektoren-yew-bin-177d596631925f1.js  konnektoren-yew-bin-1984bbc19677a5f7.js  konnektoren-yew-bin-1984bbc19677a5f7_bg.wasm  konnektoren-yew-bin-1a638f85d3daec89.js  konnektoren-yew-bin-1a94571a458121_bg.wasm  konnektoren-yew-bin-1ac845cd7b9a6775.js  konnektoren-yew-bin-1ac845cd7b9a6775_bg.wasm  konnektoren-yew-bin-1e81a4b2d730354a.js  konnektoren-yew-bin-1e81a4b2d730354a_bg.wasm  konnektoren-yew-bin-1f20f5004cac59cf.js  konnektoren-yew-bin-1f20f5004cac59cf_bg.wasm  konnektoren-yew-bin-1fd76f96b7b1a848.js  konnektoren-yew-bin-2005f039af75b07a_bg.wasm  konnektoren-yew-bin-20ddb197a577a0f2.js  konnektoren-yew-bin-21de91299b8e21aa.js  konnektoren-yew-bin-21de91299b8e21aa_bg.wasm  konnektoren-yew-bin-23c13c85e507fcc3.js  konnektoren-yew-bin-23c13c85e507fcc3_bg.wasm  konnektoren-yew-bin-23f4167290248726.js  konnektoren-yew-bin-23f4167290248726_bg.wasm  konnektoren-yew-bin-24d17383f54a822.js  konnektoren-yew-bin-24d17383f54a822_bg.wasm  (+287 more)
konnektoren-core/: Cargo.toml  justfile
konnektoren-core/assets/: articles-1.yml  contextual_choice_default.yml  custom_default.yml  dialog_begruessung.yml  gap_fill_default.yml  konjunktiv-2.yml  konnektoren.yml  konnektoren_path.yml  multiple_choice_default.yml  past-tense.yml  sentence_structure.yml  vocabulary_default.yml
konnektoren-core/src/: asset_loader.rs  error.rs  lib.rs  player_profile.rs  session.rs
konnektoren-core/src/achievements/: achievement_definition.rs  achievement_evaluator.rs  achievement_statistic.rs  game_statistics.rs  mod.rs  statistic_provider.rs
konnektoren-core/src/analytics/: mod.rs  trend.rs
konnektoren-core/src/assets/: 1.yml  achievements.yml  articles-1.yml  konnektoren.yml  konnektoren_path.yml  multiple_choice_default.yml  ordering_default.yml  past-tense.yml  personal_pronouns.yml  personal_pronouns_info.yml  placeholder.yml
konnektoren-core/src/certificates/: certificate_data.rs  certificate_image.rs  error.rs  mod.rs
konnektoren-core/src/challenges/: base64_serializable.rs  challenge.rs  challenge_config.rs  challenge_factory.rs  challenge_history.rs  challenge_input.rs  challenge_result.rs  challenge_stats.rs  challenge_type.rs  challenge_variant.rs  error.rs  events.rs  mod.rs  performance.rs  performance_record.rs  review.rs  solvable.rs  task_pattern.rs  timed.rs
konnektoren-core/src/commands/: challenge_command.rs  command.rs  command_bus.rs  command_type.rs  error.rs  errors.rs  game_command.rs  game_commands.rs  mod.rs  parse.rs
konnektoren-core/src/controller/: challenge_finish_plugin.rs  controller_plugin.rs  debug_plugin.rs  error.rs  game_controller.rs  game_xp_plugin.rs  mod.rs
konnektoren-core/src/events/: challenge_event.rs  error.rs  event.rs  event_bus.rs  event_type.rs  game_event.rs  mod.rs  parse.rs
konnektoren-core/src/game/: error.rs  game.rs  game_path.rs  game_state.rs  map.rs  mod.rs
konnektoren-core/src/i18n/: language.rs
konnektoren-core/src/konnektoren_js/: challenge.rs  command.rs  event.rs  i18n.rs  js_executor.rs  konnektoren_js.rs  konnektoren_js_impl.rs  konnketoren_challenge.rs  mod.rs  result.rs  tests.rs
konnektoren-core/src/marketplace/: cart.rs  checkout_state.rs  coupon.rs  mod.rs  payment.rs  product.rs  product_catalog.rs
konnektoren-core/src/persistence/: error.rs  game_state_persistence.rs  memory_persistence.rs  mod.rs
konnektoren-platform/: Cargo.toml  justfile
konnektoren-platform/assets/: konnektoren.manifest.yml
konnektoren-platform/assets/i18n/: ar.json  es.json  i18n.yml  long_file_de.json  pl.json  tr.json  uk.json  vi.json
konnektoren-platform/src/: lib.rs
konnektoren-platform/src/domain/: config.rs  domain.rs  language_domain.rs  mod.rs
konnektoren-platform/src/i18n/: error.rs  i18n_config.rs  language.rs  mod.rs  translation.rs  translation_asset.rs
konnektoren-platform/src/manifest/: domain.rs  extensions.rs  i18n.rs  konnektoren.rs  mod.rs
konnektoren-platform/src/tools/: i18n.rs  mod.rs
konnektoren-platform/tests/: challenge_i18n.rs  manifest.rs  schema_export.rs
konnektoren-tests/: .gitignore  Cargo.toml  README.md  justfile
konnektoren-tests/assets/i18n/: de.json  en.json
konnektoren-tests/tests/: bdd_tests.rs
konnektoren-tests/tests/features/: achievement.feature  base64_serialization.feature  challenge.feature  commands.feature  contextual_choice_navigation.feature  controller.feature  dialog.feature  game.feature  game_progression.feature  language_support.feature  performance.feature  session.feature  task_navigation.feature
konnektoren-tests/tests/steps/: achievement.rs  base64_serialization.rs  challenge.rs  commands.rs  controller.rs  dialog.rs  game.rs  game_progression.rs  language_support.rs  mod.rs  performance.rs  player_profile.rs  session.rs  task_navigation.rs
konnektoren-tui/: Cargo.toml  example.env
konnektoren-tui/src/: app.rs  challenge_tabs.rs  challenge_widget.rs  error.rs  lib.rs  main.rs  map_widget.rs  options_widget.rs  results_widget.rs  ssh_server.rs  tui.rs
konnektoren-yew/: Cargo.toml  README.md  index.html
konnektoren-yew/src/: app.rs  lib.rs  main.rs
konnektoren-yew/src/components/: adventure_map.rs  challenge.rs  challenge_config.rs  challenge_info.rs  challenge_presence.rs  challenge_rating.rs  challenge_review.rs  challenge_timer.rs  game_map.rs  game_path.rs  inbox.rs  mod.rs  music.rs  progress_bar.rs  select_language.rs  select_level.rs  timer.rs  translate.rs
konnektoren-yew/src/effects/: blink_animation.rs  mod.rs  read_text.rs
(+2266 files in other folders)
