[package]
name = "konnektoren-core"
edition = { workspace = true }
version = { workspace = true }
description = "Core library for Konnektoren"
keywords = ["konnektoren", "core", "library"]

[lib]
crate-type = ["rlib"]

[features]
default = ["achievements", "certificates", "marketplace", "js"]
achievements = ["eval"]
certificates = [
    "sha2",
    "serde_cbor",
    "ed25519-dalek",
    "image",
    "imageproc",
    "ab_glyph",
    "plot_icon",
    "qrcode",
    "lazy_static",
]
marketplace = []
csr = ["js"]
ssr = []
schema = ["schemars"]
js = [
    "serde-wasm-bindgen",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "gloo",
    "zip",
]

[dependencies]
# Core dependencies
base64 = { workspace = true }
chrono = { workspace = true }
country-emoji = { workspace = true }
eval = { workspace = true, optional = true }
isolang = { workspace = true }
log = { workspace = true }
names = { workspace = true }
rand = { workspace = true }
rmp-serde = { workspace = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

# Certificate feature dependencies
ab_glyph = { workspace = true, optional = true }
ed25519-dalek = { workspace = true, optional = true }
image = { workspace = true, optional = true }
imageproc = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
plot_icon = { workspace = true, optional = true }
qrcode = { workspace = true, optional = true }
serde_cbor = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# JS feature dependencies
gloo = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["Window"] }
zip = { workspace = true, optional = true, features = ["deflate"] }

[dev-dependencies]
env_logger = { workspace = true }
mockall = { workspace = true }
tempdir = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
wasm-bindgen-test = { workspace = true }
wasm-logger = { workspace = true }
