[package]
name = "konnektoren-platform"
edition = { workspace = true }
version = { workspace = true }
description = "Platform library for Konnektoren"
keywords = ["konnektoren", "platform", "library"]

[features]
default = []
tools = ["regex", "walkdir"]
schema = ["konnektoren-core/schema"]

[dependencies]
isolang = { workspace = true }
konnektoren-core = { path = "../konnektoren-core" }
log = { workspace = true }
regex = { workspace = true, optional = true }
rust-embed = { workspace = true, features = [
    "interpolate-folder-path",
    "debug-embed",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true, optional = true }

[dev-dependencies]
env_logger = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
