[package]
name = "konnektoren-platform"
edition = { workspace = true }
version = { workspace = true }
description = "Platform library for Konnektoren"
keywords = ["konnektoren", "platform", "library"]

[features]
default = []
tools = ["regex", "walkdir"]
schema = ["konnektoren-core/schema"]

[dependencies]
isolang = { workspace = true }
konnektoren-core = { path = "../konnektoren-core" }
tracing = { workspace = true }
regex = { workspace = true, optional = true }
rust-embed = { workspace = true, features = [
    "interpolate-folder-path",
    "debug-embed",
] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true, optional = true }

[[test]]
name = "challenge_i18n"
required-features = ["tools"]

[[test]]
name = "schema_export"
required-features = ["tools", "schema"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
