[package]
name = "konnektoren-tests"
edition = { workspace = true }
version = { workspace = true }
description = "BDD and integration tests for Konnektoren"
keywords = ["konnektoren", "tests", "bdd"]

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
cucumber = "0.20"
konnektoren-core = { path = "../konnektoren-core" }
konnektoren-platform = { path = "../konnektoren-platform" }
log = { workspace = true }
rust-embed = { version = "8.5.0", features = [
    "interpolate-folder-path",
    "debug-embed",
] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "bdd_tests"
harness = false
