[package]
name = "konnektoren-tui"
edition = { workspace = true }
version = { workspace = true }

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]

[dependencies]
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.30", features = ["serde"], default-features = false }
konnektoren-core = { path = "../konnektoren-core", default-features = false }
thiserror = { workspace=true }
log = { workspace=true }
