[package]
name = "konnektoren-tui"
edition = { workspace = true }
version = { workspace = true }
default-run = "konnektoren-tui"

[[bin]]
name = "konnektoren-tui"
path = "src/main.rs"
required-features = ["crossterm"]

[[bin]]
name = "konnektoren-tui-ssh"
path = "src/bin/ssh-server.rs"
required-features = ["ssh"]

[features]
default = ["crossterm"]
crossterm = ["dep:crossterm", "ratatui/crossterm"]
ssh = ["dep:russh", "dep:tokio", "ratatui/crossterm", "rand_core", "anyhow"]

[dependencies]
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, features = ["serde"] }
konnektoren-core = { path = "../konnektoren-core", default-features = false }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# SSH dependencies
russh = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
anyhow = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
