[package]
name = "konnektoren-yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-yew-bin"
path = "src/main.rs"

[features]
default = ["music", "storage"]
music = []
storage = ["gloo-storage"]

[dependencies]
console_log = "1.0"
log = "0.4.21"
implicit-clone = "0.4.9"
indexmap = "2.2.6"
gloo = "0.11.0"
gloo-storage = { version = "0.3.0", optional = true }
konnektoren-core = { path = "../konnektoren-core" }
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2", features = ["serde"] }
web-sys = { version = "0.3.*", features = [
    "HtmlInputElement",
    "HtmlAudioElement",
    "AudioContext"
] }
yew = { version = "0.21", features = ["csr"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
