[package]
name = "konnektoren-yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-yew-bin"
path = "src/main.rs"

[features]
default = ["effects", "music", "storage"]
effects = ["gloo/timers", "gloo/futures", "wasm-bindgen-futures"]
music = []
storage = ["gloo/storage"]

[dependencies]
console_log = "1.0"
log = "0.4.21"
implicit-clone = "0.4.9"
indexmap = "2.2.6"
gloo = {  version = "0.11.0" }
gloo-storage = { version = "0.3.0", optional = true }
konnektoren-core = { path = "../konnektoren-core" }
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
web-sys = { version = "0.3.*", features = [
    "HtmlInputElement",
    "HtmlAudioElement",
    "AudioContext",
    "HtmlSelectElement",
    "Window",
    "DomTokenList"
] }
yew = { version = "0.21", features = ["csr"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
