[package]
name = "konnektoren-yew"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "konnektoren-yew-bin"
path = "src/main.rs"

[features]
default = ["certificates", "effects", "music", "storage"]
certificates = ["konnektoren-core/certificates"]
effects = ["gloo/timers", "gloo/futures"]
music = []
storage = ["gloo/storage"]
yew-preview = ["dep:yew-preview"]

[dependencies]
console_log = "1.0"
log = "0.4.21"
implicit-clone = "0.4.9"
indexmap = "2.2.6"
gloo = { version = "0.11.0", features = ["net"] }
konnektoren-core = { path = "../konnektoren-core" }
markdown = { version ="1.0.0-alpha.18" }
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.42" }
web-sys = { version = "0.3.*", features = [
    "HtmlInputElement", "HtmlAudioElement", "AudioContext",
    "HtmlSelectElement", "Window", "DomTokenList",
    "DragEvent", "SpeechSynthesis", "SpeechSynthesisUtterance",
    "TouchList", "Touch"] }
yew = { version = "0.21", features = ["csr"] }
yew-hooks = { version = "0.3.2"}
yew-i18n = "0.1.2"
yew-preview = { git = "https://github.com/chriamue/yew-preview", optional = true }
uuid = { version = "1.10.0", features = ["v4"] }
urlencoding = "2.1.3"
rand = "0.9.0-alpha.1"
anyhow = "1.0.86"

[dev-dependencies]
wasm-bindgen-test = "0.3"
